# crustyclaw

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
plugin/.claude-plugin/: plugin.json
plugin/commands/: doctor.md  pair.md  setup.md  start.md  status.md  stop.md  update.md
plugin/hooks/: hooks.json
plugin/scripts/: auto-start.sh  check-update.sh  install-binary.sh
src/: main.rs  pair.rs  permission.rs  setup.rs  web.rs
src/claude/: mod.rs  queue.rs  session.rs
src/common/: chatlog.rs  config.rs  mod.rs  status.rs  util.rs
src/scheduler/: heartbeat.rs  mod.rs
src/telegram/: mod.rs  transcribe.rs
web/: package.json  vite.config.ts
web/src/: index.css  main.tsx  routeTree.gen.ts
web/src/components/ui/: chart.tsx
web/src/routes/: __root.tsx  chat.tsx  index.tsx  jobs.tsx  soul.tsx
web/src/types/: bindings.ts
