[package]
name = "crustyclaw"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Remote agent daemon for Claude Code"
license = "MIT"

[[bin]]
name = "crustyclaw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "process", "signal", "time", "fs", "sync"] }
teloxide = { version = "0.17" }
tokio-cron-scheduler = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
