[package]
name = "crustyclaw"
version = "0.0.0"
edition = "2021"
rust-version = "1.89"
description = "Remote agent daemon for Claude Code"
license = "MIT"

[[bin]]
name = "crustyclaw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "process", "signal", "time", "fs", "sync"] }
teloxide = { version = "0.17" }
tokio-cron-scheduler = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
specta = { version = "2.0.0-rc.23", features = ["derive", "chrono", "uuid"] }
specta-typescript = "0.0.10"
specta-serde = "0.0.10"

[features]
openssl-vendored = ["openssl-sys/vendored"]

[dependencies.openssl-sys]
version = "0.9"
optional = true

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
